<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.paigealleman.allemanfinal.MainActivity">

    <TextView
        android:id="@+id/burritoTitle"
        android:layout_width="232dp"
        android:layout_height="24dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="203dp"
        android:layout_height="42dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/burritoTitle"
        app:layout_constraintRight_toLeftOf="@+id/toggleButton"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:text="ToggleButton"
        android:textOff="@string/meatOFF"
        android:textOn="@string/veggieON"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/burritoTitle"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />
<RadioGroup
    android:id="@+id/choice"
    android:layout_width="346dp"
    android:layout_height="0dp"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

</RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="77dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:text="@string/topping1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/locationspinner"
        app:layout_constraintRight_toLeftOf="@+id/checkBox4"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.368"
        app:layout_constraintHorizontal_bias="0.288"
        android:layout_marginEnd="8dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.205"
        android:layout_marginRight="88dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginEnd="88dp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="114dp"
        android:layout_height="31dp"
        android:layout_marginLeft="16dp"
        android:text="@string/topping3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.363"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/locationspinner"
        app:layout_constraintRight_toLeftOf="@+id/checkBox2"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.375"
        android:layout_marginEnd="8dp" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping4"
        app:layout_constraintVertical_bias="0.384"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/locationspinner" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="18dp"
        android:layout_marginLeft="16dp"
        android:text="@string/toppingtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/burritoTitle"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/locationspinner"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintVertical_bias="0.511" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="122dp"
        android:layout_height="31dp"
        android:layout_marginRight="21dp"
        android:text="@string/switchGluten"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.176"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/creationresult"
        android:layout_width="208dp"
        android:layout_height="110dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        android:text="BurritoResult"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/burrito"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.98"
        app:layout_constraintHorizontal_bias="0.941" />

    <Spinner
        android:id="@+id/locationspinner"
        android:layout_width="362dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/locations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/burritoTitle"
        app:layout_constraintVertical_bias="0.588" />

    <Button
        android:id="@+id/button"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:text="@string/buildbutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/locationspinner"
        app:layout_constraintHorizontal_bias="0.223" />

    <RadioGroup
        android:id="@+id/burritochoice"
        android:layout_width="210dp"
        android:layout_height="49dp"
        android:layout_marginLeft="31dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/radioBurrito"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintVertical_bias="0.538" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/radioTaco"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintLeft_toRightOf="@+id/radioButton1"
            app:layout_constraintTop_toBottomOf="@+id/editText" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="105dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        tools:layout_editor_absoluteY="344dp"
        tools:layout_editor_absoluteX="221dp" />

</android.support.constraint.ConstraintLayout>
